Change Log:

15-03-09: -Unregistering windowclass on failure of window creation.
09-06-08: -Made pop3 subject checking work.
		  -Fixed bug where AcidMail could go into an endless loop if a connection error
			occurred during graceful shutdown.
08-06-08: -Wrote pop3 subject checking code, still buggy though.
07-06-08: -Added first subject checking code.
		  -Removed bang.cpp/.h.
05-06-08: -Fixed connection error reporting a socket error number when there was no socket
			error.
13-05-08: -Made IMAP work again, cleaned up some code and reduced file size.
12-05-08: -Added !AcidMailSetPass (server) (user) (password). Before saved passwords couldn't
			be modified once stored, now they can.
11-05-08: -Put server responses in errors when applicable.
10-05-08: -Error interface now takes strings instead of numbers, $AcidMail<Name>Error$ now
			returns the error string.
		  -Put socket in in mailbox object thus no longer sending sockets around in function
			calls.
23-04-08: -Replaced ugly imap recent mail number checking algorithm with a slightly less ugly
			algorithm.
27-02-08: -Fixed some error messages which weren't working.
26-02-08: -More graceful closing of connection if whole communication succeeds.
19-02-08: -Using getaddrinfo now instead of gethostbyname and gethostbyaddr. This doesn't
			just make the code simpler, but now AcidMail also supports domains which have
			multiple homes. It will try connect to all of them untill it works. This should
			make AcidMail more reliable.
		  -Made AcidMail use Winsock 2.2. This breaks compatibility with old (pre-osr2) win95
			builds.
31-01-08: -Fixed regression introduced in 0.7 pre-build.
11-01-08: -Put WSAStartup in main
		  -Added an extra error message (10).
10-01-08: -Added 2 missing mailbox notifications to 2 warnings.
08-01-08: -Did some minor cleanup/changes.
02-01-08: -Mailboxes now export their error number to $AcidMail<Name>Error$.
		  -Some code cleanup.