@@ -5,6 +5,8 @@
 #define IDD_GETPASS                     101
 #define IDC_EDIT1                       1001
 #define IDC_PASSWORD                    1001
+#define IDC_STATIC						-1
+
 
 // Next default values for new objects
 // 
